# hf-ai-course

./: .gitignore  main.py  pyproject.toml  requirements.txt
