[project]
name = "hf-ai-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.6"
dependencies = [
    "accelerate>=0.21.0",
    "datasets>=2.14.0",
    "evaluate>=0.4.0",
    "google-generativeai>=0.4.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "protobuf>=3.20.0",
    "pytest>=8.3.5",
    "requests>=2.30.0",
    "scikit-learn>=1.2.0",
    "sentencepiece>=0.1.99",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "typing-extensions>=4.5.0",
]
